@@ -1,0 +1,14 @@
+<p><br>
+PSP Port Tips: <br>
+<b>UP</b> = Previpus Link <b>Down</b> = Next Link<br>
+<b>LEFT</b> = Back <b>RIGHT</b> = Forward<br>
+<b>O+UP</b> = Page up <b>O+Down</b> = Page Down<br>
+<b>L</b> = Prev Window <b>R</b> = Next Window<br>
+<b>CROSS</b> = Yes / OK / Enter<br>
+<b>SQUARE</b> = No / Cancel<br>
+Input mode: <b>L+START</b> = Enter <b>R+START</b> = Exit<br>
+<b>START</b> = Context Menu. <b>SELECT</b> = Enter URL.<br>
+<br>
+<b>Hint:</b> Replace APP_Retawq/tips.html with your own html to<br>
+override these tips!.<br>
+</p><br>
